Revert "Fix scrollbar display on Firefox (#1064)"
This reverts commit b2ad5596a66daeedcbfe0ffe16e07269907c9294.

--- a/v2/frontend/src/styles/mixins.scss
+++ b/v2/frontend/src/styles/mixins.scss
@@ -329,7 +329,4 @@ $shadow-level-3: 2px 6px 12px 0 rgba(25, 25, 25, 0.55);
         background-color: var(--scrollbar-bg);
         border-radius: 2px;
     }
-
-    scrollbar-color: var(--scrollbar-bg) transparent;
-    scrollbar-width: thin;
 }
